# qkd-satellite-constellation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cli/: simulate.py
config/: config.yaml
dashboard/: app.py
outputs/data/: qkd_results_Dehradun.csv  qkd_results_Hanle.csv  qkd_results_Kodaikanal.csv  qkd_results_MtAbu.csv  qkd_results_Shillong.csv  synthetic_tle.txt
scripts/: generate_plots.py  run_cli_simulation.py
src/qkd_constellation/: config.py  constants.py
src/qkd_constellation/constellation/: generator.py
src/qkd_constellation/ground_stations/: stations.py
src/qkd_constellation/orbital/: mechanics.py
src/qkd_constellation/qkd/: bb84.py  channel.py
src/qkd_constellation/simulation/: runner.py
src/qkd_constellation/visualization/: plots.py
tests/: test_constellation.py  test_integration.py  test_orbital.py  test_qkd.py
